[gd_scene load_steps=2 format=3 uid="uid://dvrxu6ntetf8m"]

[ext_resource type="Script" path="res://ui/components/dialogue_box.gd" id="1_1efv0"]

[node name="DialogueBox" type="PanelContainer"]
anchors_preset = 11
anchor_left = 0.05
anchor_right = 0.95
anchor_bottom = 1.0
offset_top = -220.0
offset_bottom = -20.0
mouse_filter = 1
visible = false
script = ExtResource("1_1efv0")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="SpeakerLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Speaker"

[node name="TextWrapper" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer/TextWrapper"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
fit_content = true
scroll_active = false
scroll_following = true
text = "Dialogue goes here"

[node name="ContinueLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "â–¼ Press SPACE or CLICK"
visible = false

[node name="TypeTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = false
wait_time = 0.03

[connection signal="timeout" from="TypeTimer" to="." method="_on_type_timer_timeout"]
